# RayTracing

./: .gitignore  CMakeLists.txt  README.md
config/: cbox.yaml  cup.yaml  diningroom.yaml  room.yaml  veach_mis.yaml
include/: Camera.hpp  KdTree.hpp  Model.hpp  Object.hpp  Ray.hpp  RayTracer.hpp  Scene.hpp  Ultility.hpp
models/cbox/: cbox.mtl
models/cup/: cup.mtl
models/room/: room.mtl
src/: Camera.cc  KdTree.cc  Model.cc  Object.cc  Ray.cc  RayTracer.cc  Scene.cc  Ultility.cc  main.cc
test/: test.cc  validation.py
