cmake_minimum_required(VERSION 2.8) 
project(RayTracing) 
set(CMAKE_CXX_COMPILER "g++")
set(CMAKE_CXX_FLAGS " -O3 -pthread -march=native -std=c++11 -fopenmp")
find_package(Eigen3 REQUIRED)
find_package(OpenCV REQUIRED)
set(yaml-cpp_DIR "/usr/lib/x86_64-linux-gnu/cmake/yaml-cpp/")
find_package(yaml-cpp REQUIRED)
find_package(OpenMP REQUIRED)
include_directories("${CMAKE_SOURCE_DIR}/include")
include_directories(${EIGEN3_INCLUDE_DIRS})
include_directories(${OpenCV_INCLUDE_DIRS})
include_directories(${YAML_CPP_INCLUDE_DIR})

add_executable(Target src/main.cc src/Ray.cc src/Camera.cc src/Scene.cc src/Ultility.cc src/RayTracer.cc src/Model.cc src/Object.cc src/KdTree.cc src/Ultility.cc)
add_executable(Loadtest test/test.cc src/Model.cc src/Ultility.cc src/Ray.cc src/Object.cc)
target_link_libraries(Loadtest ${YAML_CPP_LIBRARIES}) 

target_link_libraries(Target ${OpenCV_LIBRARIES} ${YAML_CPP_LIBRARIES}) 
